# imposition-rs

./: .gitignore  .vercelignore  Cargo.toml  README.md  build-wasm.ps1  package-lock.json  package.json  tsconfig.json  vercel.json  vite.config.ts
.github/workflows/: ci.yml
scripts/: build-wasm-ci.sh
src/: guillotine.rs  layout_search.rs  lib.rs  proportion.rs  render_svg.rs  wasm_api.rs
tests/: integration.rs
web/: index.html  main.ts  style.css
