[package]
name = "layout_rs"
version = "0.1.0"
edition = "2021"
authors = ["Layout contributors"]
description = "Proportion / sheet planning logic compiled to WebAssembly"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3.77"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
wasm-bindgen = "0.2.100"

[profile.release]
opt-level = "z"
lto = true
