[package]
name = "layout_rs"
version = "0.1.0"
edition = "2024"
authors = ["Layout contributors"]
description = "Proportion / sheet planning logic compiled to WebAssembly"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "^0.3"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
wasm-bindgen = "^0.2"

[profile.release]
opt-level = "z"
lto = true
